--- a/frontend/just_governance/login.html
+++ b/frontend/just_governance/login.html
@@ -72,6 +72,7 @@
     .link a {
       text-decoration: none;
       color: #2196F3;
+      cursor: pointer;
     }
     .footer {
       text-align: center;
@@ -87,8 +88,9 @@
 </head>
 <body>
   <div class="container">
-    <h2>login/ register</h2>
-    <div class="tabs">
+    <h2 id="title">login/ register</h2>
+    
+    <div class="tabs" id="tabs">
       <div id="loginTab" class="tab active" onclick="showForm('login')">login</div>
       <div id="registerTab" class="tab" onclick="showForm('register')">register</div>
     </div>
@@ -99,7 +101,7 @@
       <input type="password" id="login-password" placeholder="password">
       <button type="submit">login</button>
       <div class="link">
-        <a href="forgot-password.html">forget password?</a>
+        <a onclick="showForm('forgot')">forget password?</a>
       </div>
     </form>
 
@@ -115,26 +117,64 @@
       <button type="submit">register</button>
     </form>
 
-    <!-- 底部 -->
+    <!-- 忘记密码 -->
+    <form id="forgotForm" class="form" onsubmit="return sendResetEmail()">
+      <input type="email" id="forgot-email" placeholder="enter your email">
+      <button type="submit">send reset email</button>
+      <div class="link">
+        <a onclick="showForm('login')">back to login</a>
+      </div>
+    </form>
+
+    <!-- 设置新密码 -->
+    <form id="resetForm" class="form" onsubmit="return resetPassword()">
+      <input type="password" id="new-password" placeholder="new password">
+      <input type="password" id="confirm-password" placeholder="confirm password">
+      <button type="submit">reset password</button>
+      <div class="link">
+        <a onclick="showForm('forgot')">resend email</a>
+      </div>
+    </form>
+
+    <!-- 重置成功提示 -->
+    <div id="successMsg" class="form">
+      <p style="text-align:center;">Password reset successful!</p>
+      <button onclick="showForm('login')">Go to login</button>
+    </div>
+
     <div class="footer">
       <a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a>
     </div>
   </div>
 
   <script>
-    // 切换 Tab
     function showForm(type) {
+      // 隐藏所有表单
+      ['loginForm','registerForm','forgotForm','resetForm','successMsg'].forEach(id=>{
+        document.getElementById(id).classList.remove('active');
+      });
+      // 移除 tab 激活状态
       document.getElementById("loginTab").classList.remove("active");
       document.getElementById("registerTab").classList.remove("active");
-      document.getElementById("loginForm").classList.remove("active");
-      document.getElementById("registerForm").classList.remove("active");
+      document.getElementById("tabs").style.display = (type==='login'||type==='register') ? 'flex':'none';
 
-      if (type === "login") {
-        document.getElementById("loginTab").classList.add("active");
+      if(type==='login'){
         document.getElementById("loginForm").classList.add("active");
-      } else {
-        document.getElementById("registerTab").classList.add("active");
+        document.getElementById("loginTab").classList.add("active");
+        document.getElementById("title").innerText = "login/ register";
+      } else if(type==='register'){
         document.getElementById("registerForm").classList.add("active");
+        document.getElementById("registerTab").classList.add("active");
+        document.getElementById("title").innerText = "login/ register";
+      } else if(type==='forgot'){
+        document.getElementById("forgotForm").classList.add("active");
+        document.getElementById("title").innerText = "reset password";
+      } else if(type==='reset'){
+        document.getElementById("resetForm").classList.add("active");
+        document.getElementById("title").innerText = "set new password";
+      } else if(type==='success'){
+        document.getElementById("successMsg").classList.add("active");
+        document.getElementById("title").innerText = "success";
       }
     }
 
@@ -148,21 +188,20 @@
         return false;
       }
 
-      // 模拟异常分支
+      // 模拟分支
       if (email === "nouser@test.com") {
         alert("The account does not exist, please register first.");
       } else if (password !== "123456") {
         alert("Incorrect password, please try again or click on forgot password.");
       } else if (email === "unverified@test.com") {
-        alert("Email not verified, please complete the email verification first.（模拟：提供重新发送链接）");
+        alert("Email not verified, please complete verification first.");
       } else {
-        alert("Login successful!（模拟：跳转到主页面并弹出项目简介）");
+        alert("Login successful!（模拟：弹出项目简介）");
       }
-
-      return false; 
+      return false;
     }
 
-    // 注册验证（模拟）
+    // 注册验证
     function validateRegister() {
       let email = document.getElementById("reg-email").value.trim();
       let password = document.getElementById("reg-password").value.trim();
@@ -181,15 +220,51 @@
         alert("Please agree to the terms of service.");
         return false;
       }
-
-      // 模拟邮箱已注册
       if (email === "exist@test.com") {
         alert("This email has already been registered, please log in.");
         showForm('login');
         return false;
       }
+      alert("Registration successful! Please verify your email.");
+      return false;
+    }
 
-      alert("Registration successful! Please verify your email.（模拟：已发送验证邮件）");
+    // 发送重置邮件
+    function sendResetEmail() {
+      let email = document.getElementById("forgot-email").value.trim();
+      if(!email){
+        alert("Please enter your email.");
+        return false;
+      }
+
+      // 模拟邮箱不存在/已发送
+      if(email === "nouser@test.com"){
+        alert("If not registered, please register first."); // 不暴露是否存在
+      } else {
+        alert("Reset email sent!（模拟）");
+      }
+
+      // 跳转到重置密码页面（模拟点击邮件链接）
+      setTimeout(()=>showForm('reset'), 500);
+      return false;
+    }
+
+    // 设置新密码
+    function resetPassword() {
+      let newPwd = document.getElementById("new-password").value.trim();
+      let confirmPwd = document.getElementById("confirm-password").value.trim();
+
+      if(!newPwd || !confirmPwd){
+        alert("Please enter new password and confirm.");
+        return false;
+      }
+      if(newPwd !== confirmPwd){
+        alert("Passwords do not match.");
+        return false;
+      }
+
+      alert("Password reset successful!");
+      showForm('success');
       return false;
     }
   </script>
